--- a/mytime-ui/src/app/app.component.css
+++ b/mytime-ui/src/app/app.component.css
@@ -6,17 +6,76 @@
     flex-direction: row;
     padding-left: 0;
     padding-right: 0;
-    padding-top: 25px !important;
+    /* padding-top: 25px !important; */
 }
+
 @media (max-width: 767px) {
     .content-wrapper {
         padding: 3.5rem 1.5rem !important;
     }
 }
+
 .content-wrapper {
     background: #f4f7fa;
     padding: 3.5rem 1.5rem !important;
     width: 100%;
     -webkit-flex-grow: 1;
     flex-grow: 1;
+}
+
+:root {
+  --navbar-height: 70px; /* adjust as needed */
+  --sidebar-width-lg: 260px;
+  --action-transition-duration: 0.25s;
+  --action-transition-timing-function: ease;
+  --content-bg: #f5f7ff;
+}
+
+.page-body-wrapper {
+  min-height: calc(100vh - var(--navbar-height));
+  display: flex;
+  flex-direction: row;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: var(--navbar-height);
+}
+
+.page-body-wrapper.full-page-wrapper {
+  width: 100%;
+  min-height: 100vh;
+  padding-top: 0;
+}
+
+.main-panel-full {
+  transition: 
+    width var(--action-transition-duration) var(--action-transition-timing-function),
+    margin var(--action-transition-duration) var(--action-transition-timing-function);
+  width: calc(100% - var(--sidebar-width-lg));
+  min-height: calc(100vh - var(--navbar-height));
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 991px) {
+  .main-panel-full {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
+.content-wrapper-full {
+  background: var(--content-bg);
+  padding: 0 !important;
+  width: 100%;
+  flex-grow: 1;
+}
+
+@media (max-width: 767px) {
+  .content-wrapper-full {
+    padding: 1.5rem;
+  }
+}
+
+app-login{
+    width: 100% !important;
 }
