--- a/mytime-ui/src/app/common/components/login.component.html
+++ b/mytime-ui/src/app/common/components/login.component.html
@@ -2,10 +2,10 @@
     <div class="brand-logo">
         <img src="/assets/images/logo-dark.svg" alt="logo">
     </div>
-    
+
     <h4>Welcome back!</h4>
     <h6 class="font-weight-light">Happy to see you again!</h6>
-    
+
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="pt-3">
         <!-- Username Field -->
         <div class="form-group">
@@ -16,12 +16,8 @@
                         <i class="mdi mdi-account-outline text-primary"></i>
                     </span>
                 </div>
-                <input 
-                    type="text" 
-                    class="form-control form-control-lg border-left-0" 
-                    id="username"
-                    formControlName="username"
-                    placeholder="Username"
+                <input type="text" class="form-control form-control-lg border-left-0" id="username"
+                    formControlName="username" placeholder="Username"
                     [class.is-invalid]="username?.invalid && (username?.dirty || username?.touched)">
             </div>
             <div *ngIf="username?.invalid && (username?.dirty || username?.touched)" class="text-danger small mt-1">
@@ -32,24 +28,26 @@
         <!-- Password Field -->
         <div class="form-group">
             <label for="password">Password</label>
-            <div class="input-group">
+
+            <div class="input-group position-relative">
+
                 <div class="input-group-prepend bg-transparent">
                     <span class="input-group-text bg-transparent border-right-0">
                         <i class="mdi mdi-lock-outline text-primary"></i>
                     </span>
                 </div>
-                <input 
-                    type="password" 
-                    class="form-control form-control-lg border-left-0" 
-                    id="password"
-                    formControlName="password"
-                    placeholder="Password"
-                    [class.is-invalid]="password?.invalid && (password?.dirty || password?.touched)">
+
+                <input type="password" id="password" class="form-control form-control-lg border-left-0 pr-5"
+                    formControlName="password" placeholder="Password" appTogglePassword
+                    [class.is-invalid]="password?.invalid && (password?.dirty || password?.touched)" />
+
             </div>
+
             <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="text-danger small mt-1">
                 <div *ngIf="password?.errors?.['required']">Password is required</div>
             </div>
         </div>
+
 
         <!-- Remember Me & Forgot Password -->
         <div class="my-2 d-flex justify-content-between align-items-center">
@@ -69,9 +67,7 @@
 
         <!-- Login Button -->
         <div class="my-3">
-            <button 
-                type="submit" 
-                class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn"
+            <button type="submit" class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn"
                 [disabled]="loginForm.invalid || isLoading">
                 <span *ngIf="!isLoading">LOGIN</span>
                 <span *ngIf="isLoading">
