global loader integration

--- a/mytime-ui/src/app/common/components/login.component.html
+++ b/mytime-ui/src/app/common/components/login.component.html
@@ -6,7 +6,7 @@
     <h4>Welcome back!</h4>
     <h6 class="font-weight-light">Happy to see you again!</h6>
 
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="pt-3">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="pt-3" autocomplete="on">
         <!-- Username Field -->
         <div class="form-group">
             <label for="username">Username</label>
@@ -16,48 +16,62 @@
                         <i class="mdi mdi-account-outline text-primary"></i>
                     </span>
                 </div>
-                <input type="text" class="form-control form-control-lg border-left-0" id="username"
-                    formControlName="username" placeholder="Username"
-                    [class.is-invalid]="username?.invalid && (username?.dirty || username?.touched)">
+                <input type="text" 
+                       class="form-control form-control-lg border-left-0" 
+                       id="username"
+                       formControlName="username" 
+                       placeholder="Username"
+                       autocomplete="username"
+                       [class.is-invalid]="hasError('username', 'required') || hasError('username', 'minlength')">
             </div>
-            <div *ngIf="username?.invalid && (username?.dirty || username?.touched)" class="text-danger small mt-1">
-                <div *ngIf="username?.errors?.['required']">Username is required</div>
+            <div *ngIf="hasError('username', 'required')" class="text-danger small mt-1">
+                Username is required
+            </div>
+            <div *ngIf="hasError('username', 'minlength')" class="text-danger small mt-1">
+                Username must be at least 3 characters
             </div>
         </div>
 
         <!-- Password Field -->
         <div class="form-group">
             <label for="password">Password</label>
-
-            <div class="input-group position-relative">
-
+            <div class="input-group">
                 <div class="input-group-prepend bg-transparent">
                     <span class="input-group-text bg-transparent border-right-0">
                         <i class="mdi mdi-lock-outline text-primary"></i>
                     </span>
                 </div>
-
-                <input type="password" id="password" class="form-control form-control-lg border-left-0 pr-5"
-                    formControlName="password" placeholder="Password" appTogglePassword
-                    [class.is-invalid]="password?.invalid && (password?.dirty || password?.touched)" />
-
+                <input type="password" 
+                       id="password" 
+                       class="form-control form-control-lg border-left-0"
+                       formControlName="password" 
+                       placeholder="Password" 
+                       autocomplete="current-password"
+                       appTogglePassword
+                       [class.is-invalid]="hasError('password', 'required') || hasError('password', 'minlength')">
             </div>
-
-            <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="text-danger small mt-1">
-                <div *ngIf="password?.errors?.['required']">Password is required</div>
+            <div *ngIf="hasError('password', 'required')" class="text-danger small mt-1">
+                Password is required
+            </div>
+            <div *ngIf="hasError('password', 'minlength')" class="text-danger small mt-1">
+                Password must be at least 6 characters
             </div>
         </div>
 
-
         <!-- Remember Me & Forgot Password -->
-        <div class="my-2 d-flex justify-content-between align-items-center">
+        <div class="my-3 d-flex justify-content-between align-items-center">
             <div class="form-check">
                 <label class="form-check-label text-muted">
-                    <input type="checkbox" class="form-check-input" formControlName="rememberMe">
+                    <input type="checkbox" 
+                           class="form-check-input" 
+                           formControlName="rememberMe"
+                           id="rememberMe">
                     Keep me signed in
                 </label>
             </div>
-            <a href="#" class="auth-link text-black">Forgot password?</a>
+            <a href="javascript:void(0)" class="auth-link text-black" (click)="onForgotPassword()">
+                Forgot password?
+            </a>
         </div>
 
         <!-- Error Message -->
@@ -67,23 +81,26 @@
 
         <!-- Login Button -->
         <div class="my-3">
-            <button type="submit" class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn"
-                [disabled]="loginForm.invalid || isLoading">
-                <span *ngIf="!isLoading">LOGIN</span>
-                <span *ngIf="isLoading">
-                    <span class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>
-                    Logging in...
-                </span>
+            <button type="submit" 
+                    class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn"
+                    [disabled]="loginForm.invalid">
+                LOGIN
             </button>
         </div>
 
         <!-- Social Login (Optional) -->
         <div class="mb-2 d-flex">
-            <button type="button" class="btn btn-facebook auth-form-btn flex-grow mr-1" disabled>
+            <button type="button" 
+                    class="btn btn-facebook auth-form-btn flex-grow mr-1" 
+                    (click)="onSocialLogin('facebook')"
+                    [disabled]="loginForm.invalid">
                 <i class="mdi mdi-facebook mr-2"></i>
                 Facebook
             </button>
-            <button type="button" class="btn btn-google auth-form-btn flex-grow ml-1" disabled>
+            <button type="button" 
+                    class="btn btn-google auth-form-btn flex-grow ml-1" 
+                    (click)="onSocialLogin('google')"
+                    [disabled]="loginForm.invalid">
                 <i class="mdi mdi-google mr-2"></i>
                 Google
             </button>
@@ -91,7 +108,7 @@
 
         <!-- Register Link -->
         <div class="text-center mt-4 font-weight-light">
-            Don't have an account? <a class="text-primary">Create</a>
+            Don't have an account? <a class="text-primary" (click)="onRegister()">Create</a>
         </div>
     </form>
 </div>
