--- a/mytime-ui/src/app/app.component.html
+++ b/mytime-ui/src/app/app.component.html
@@ -12,6 +12,9 @@
         <app-sidebar></app-sidebar>
 
         <div class="main-panel">
+          <!-- Panel Loader - will appear only inside main-panel -->
+          <app-panel-loader></app-panel-loader>
+          
           <div class="content-wrapper">
 
             <app-title></app-title>
@@ -30,6 +33,7 @@
     <ng-template #loginLayout>
       <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper-full d-flex align-items-stretch auth auth-img-bg">
+          <app-panel-loader></app-panel-loader>
           <div class="row flex-grow w-100">
 
             <div class="col-lg-6 d-flex align-items-center justify-content-center">
