--- a/mytime-ui/src/app/layout/header.component.html
+++ b/mytime-ui/src/app/layout/header.component.html
@@ -1,43 +1,62 @@
-<!-- partial:partials/_navbar.html -->
-    <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo" href="index.html"><img src="assets/images/logo.svg" alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo"/></a>
-      </div>
-      <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
-        <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
-          <span class="icon-menu"></span>
-        </button>
-        <ul class="navbar-nav mr-lg-2">
-          <li class="nav-item nav-search d-none d-lg-block">
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="search">
-                  <i class="icon-search"></i>
-                </span>
-              </div>
-              <input type="text" class="form-control" placeholder="Search Projects.." aria-label="search" aria-describedby="search">
-            </div>
-          </li>
-        </ul>
-        <ul class="navbar-nav navbar-nav-right">
-            <li class="nav-item dropdown d-lg-flex d-none">
-                <button type="button" class="btn btn-info font-weight-bold">+ Create New</button>
-            </li>
-          <li class="nav-item dropdown d-flex">
-          <app-notifications></app-notifications>
-          </li>
-          <li class="nav-item dropdown d-flex mr-4 ">
-          <app-settings></app-settings>
-          </li>
-          <li class="nav-item dropdown mr-4 d-lg-flex d-none">
-            <a class="nav-link count-indicatord-flex align-item s-center justify-content-center" href="#">
-              <i class="icon-grid"></i>
-            </a>
-          </li>
-        </ul>
-        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-          <span class="icon-menu"></span>
-        </button>
-      </div>
-    </nav>
+<nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
+  <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
+    <a class="navbar-brand brand-logo" routerLink="/admin/dashboard">
+      <img src="assets/images/logo.svg" alt="logo"/>
+    </a>
+    <a class="navbar-brand brand-logo-mini" routerLink="/admin/dashboard">
+      <img src="assets/images/logo-mini.svg" alt="logo"/>
+    </a>
+  </div>
+  
+  <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
+    <!-- Desktop toggle button (hidden) -->
+    <button class="navbar-toggler navbar-toggler align-self-center d-none" type="button">
+      <span class="icon-menu"></span>
+    </button>
+    
+    <!-- Mobile toggle button (only visible on mobile) -->
+    <button class="navbar-toggler navbar-toggler align-self-center d-lg-none" 
+            type="button" 
+            (click)="toggleMobileMenu()">
+      <span class="icon-menu"></span>
+    </button>
+    
+    <ul class="navbar-nav mr-lg-2">
+      <li class="nav-item nav-search d-none d-lg-block">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="search">
+              <i class="icon-search"></i>
+            </span>
+          </div>
+          <input type="text" class="form-control" placeholder="Search Projects.." 
+                 aria-label="search" aria-describedby="search">
+        </div>
+      </li>
+    </ul>
+    
+    <ul class="navbar-nav navbar-nav-right">
+      <li class="nav-item dropdown d-lg-flex d-none">
+        <button type="button" class="btn btn-info font-weight-bold">+ Create New</button>
+      </li>
+      <li class="nav-item dropdown d-flex">
+        <app-notifications></app-notifications>
+      </li>
+      <li class="nav-item dropdown d-flex mr-4">
+        <app-settings></app-settings>
+      </li>
+      <li class="nav-item dropdown mr-4 d-lg-flex d-none">
+        <a class="nav-link count-indicatord-flex align-item s-center justify-content-center" href="#">
+          <i class="icon-grid"></i>
+        </a>
+      </li>
+    </ul>
+    
+    <!-- Mobile toggle button on right side -->
+    <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" 
+            type="button" 
+            (click)="toggleMobileMenu()">
+      <span class="icon-menu"></span>
+    </button>
+  </div>
+</nav>
